# bevy_impulse

./: .gitignore  Cargo.toml  README.md  biome.json  build.rs  diagram.schema.json  index.html  message-traits-problems.md  package.json  package.xml  pnpm-lock.yaml  pnpm-workspace.yaml  registry.schema.json  ros2-feature.repos
.cargo/: config.toml
bevy_impulse_dyn/: Cargo.toml  README.md  blueprint.schema.json
bevy_impulse_dyn/src/: blueprint.rs  callback_registry.rs  diagram.rs  generate_schema.rs  lib.rs  map.rs  map_registry.rs  node_registry.rs  provider_registry.rs  serialization.rs  service_registry.rs
bevy_impulse_dyn/tdd/registering-services/: README.md
bevy_services/: Cargo.toml
diagram-editor/: .gitignore  Cargo.toml  README.md  build.rs  jest.config.js  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json
diagram-editor/.storybook/: main.ts  preview.ts
diagram-editor/frontend/: add-operation.tsx  api-client-provider.tsx  api-client.ts  api.preprocessed.schema.json  app.css  app.tsx  auto-layout-button.tsx  command-panel.tsx  diagram-editor.tsx  diagram.preprocessed.schema.json  diagram.schema.json  edit-templates-dialog.tsx  editor-mode.tsx  export-diagram-dialog.tsx  handles.tsx  index.tsx  node-manager.ts  registry-provider.tsx  run-button.tsx  templates-provider.tsx  use-edges.ts  use-react-flow.ts
diagram-editor/frontend/api-client/: api-client.ts  base-api-client.ts  debug-session.ts  index.ts  rest-client.ts  wasm-client.ts
diagram-editor/frontend/api-client/wasm-stub/: stub.d.ts  stub.js
diagram-editor/frontend/edges/: buffer-edge.tsx  buffer-key-edge.tsx  buffer-seq-edge.tsx  create-edge.ts  data-edge.ts  default-edge.tsx  fork-result-err-edge.tsx  fork-result-ok-edge.tsx  index.ts  input-slots.ts  section-edge.tsx  split-key-edge.tsx  split-remaining-edge.tsx  split-seq-edge.tsx  stream-out-edge.tsx  types.d.ts  unzip-edge.tsx
diagram-editor/frontend/forms/: base-edit-operation-form.tsx  buffer-edge-form.tsx  buffer-form.tsx  data-input-form.tsx  edit-edge-form.stories.tsx  edit-edge-form.tsx  edit-node-form.stories.tsx  edit-node-form.tsx  edit-operation-form.tsx  edit-scope-form.tsx  fork-result-edge-form.tsx  index.ts  index.tsx  join-form.tsx  node-form.tsx  op-id-form.tsx  section-form.tsx  split-edge-form.tsx  stream-out-edge-form.tsx  stream-out-form.tsx  transform-form.stories.tsx  transform-form.tsx  unzip-edge-form.tsx
diagram-editor/frontend/nodes/: base-node.tsx  buffer-access-node.tsx  buffer-node.tsx  create-node.ts  fork-clone-node.tsx  fork-result-node.tsx  icons.tsx  index.ts  index.tsx  input-node.tsx  input-output-node.tsx  join-node.tsx  listen-node.tsx  node-node.test.tsx  node-node.tsx  output-node.tsx  scope-node.tsx  section-node.tsx  serialized-join-node.tsx  split-node.tsx  start-node.tsx  stream-out-node.tsx  terminate-node.tsx  test-utils.test.tsx  test-utils.tsx  transform-node.tsx  types.d.ts  unzip-node.tsx  utils.ts
diagram-editor/frontend/types/: api.d.ts  diagram.d.ts  diagram.ts  index.ts  react-flow.d.ts  react-flow.ts  registry.d.ts
diagram-editor/frontend/utils/: ajv.ts  auto-layout.ts  buffer-settings.ts  change.ts  connection.test.ts  connection.ts  create-node.ts  exhaustive-check.ts  export-diagram.test.ts  export-diagram.ts  index.ts  layout.ts  load-diagram.test.ts  load-diagram.ts  namespace.ts  operation.ts  unique-value.ts
diagram-editor/frontend/utils/test-data/: test-diagram-scope.json  test-diagram-section.json  test-diagram.json
diagram-editor/scripts/: build-wasm-demo.sh  build-wasm-example.sh  deploy-ghpages.sh  dev-wasm.sh  generate-types.mjs  generate-wasm-stub.sh  generate-wasm.sh
diagram-editor/server/: basic_executor.rs  frontend.rs  lib.rs  router.rs
diagram-editor/server/api/: error_responses.rs  executor.rs  mod.rs  wasm.rs  websocket.rs
diagram-editor/src/: app.css  diagram-editor.tsx
diagram-editor/src/nodes/: index.ts  input-output-node.tsx
diagram-editor/src/types/: diagram.d.ts
diagram-editor/src/utils/: auto-layout.ts  load-diagram-json.test.ts  load-diagram-json.ts  load-diagram.ts
diagram-editor/src/utils/test-data/: multiply3.json  test-diagram.json
diagram-editor/wasm/: Cargo.toml  README.md
diagram-editor/wasm/src/: errors.rs  executor.rs  globals.rs  lib.rs  registry.rs  test_utils.rs
examples/diagram/calculator/: Cargo.toml  README.md  build.rs  multiply3.json
examples/diagram/calculator/diagrams/: clone_from_buffer.json  countdown.json  fibonacci.json  split_and_join.json
examples/diagram/calculator/src/: main.rs
examples/diagram/calculator/tests/: e2e.rs
examples/diagram/calculator_lib/: Cargo.toml
examples/diagram/calculator_lib/src/: lib.rs
examples/diagram/calculator_ops_catalog/: Cargo.toml
examples/diagram/calculator_ops_catalog/src/: lib.rs
examples/diagram/calculator_wasm/: Cargo.toml  README.md
examples/diagram/calculator_wasm/src/: lib.rs
examples/diagram/ros2/: Cargo.toml  README.md
examples/diagram/ros2/src/: fake_plan_generator.rs  goal_requester.rs  nav_example.rs
examples/ros2/: Cargo.toml  README.md  package.xml
examples/ros2/diagrams/: default-nav-system.json
examples/ros2/src/: fake_plan_generator.rs  goal_requester.rs  lib.rs  nav_example.rs  nav_executor.rs  nav_ops_catalog.rs
examples/zenoh-examples/: Cargo.toml  README.md  build.rs
examples/zenoh-examples/protos/: door.proto
examples/zenoh-examples/src/: door_manager.rs  lib.rs  protos.rs  use_door.rs
generic_serialization_poc/: base.rs  main.rs  message_trait.rs  message_trait_2.rs  no_common_operations.rs
macros/: Cargo.toml  README.md
macros/src/: buffer.rs  buffers.rs  delivery_label_macro.rs  derive_buffer.rs  derive_section.rs  derive_stream.rs  derive_stream_pack.rs  diagram_message.rs  lib.rs  section.rs  stream_macro.rs  stream_pack.rs  unzip_macro.rs
scripts/: patch-versions-msrv-1_75.sh
src/: buffer.rs  builder.rs  callback.rs  cancel.rs  chain.rs  channel.rs  diagram.rs  discovery.rs  disposal.rs  errors.rs  flush.rs  gate.rs  handler.rs  impulse.rs  input.rs  lib.rs  map.rs  map_once.rs  node.rs  (+17 more)
(+217 files in other folders)
