[package]
name = "bevy_impulse"
version = "0.0.2"
edition = "2021"
authors = ["Grey <mxgrey@intrinsic.ai>"]
license = "Apache-2.0"
description = "Reactive programming and workflow execution for bevy"
readme = "README.md"
repository = "https://github.com/open-rmf/bevy_impulse"
keywords = ["reactive", "workflow", "behavior", "agent", "bevy"]
categories = [
  "science::robotics",
  "asynchronous",
  "concurrency",
  "game-development",
]

[workspace.dependencies]
schemars = { version = "0.9.0" }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = { version = "1.0.128" }

[dependencies]
bevy_impulse_derive = { path = "macros", version = "0.0.2" }
bevy_ecs = "0.12"
bevy_utils = "0.12"
bevy_hierarchy = "0.12"
bevy_derive = "0.12"
bevy_app = "0.12"

async-task = { version = "4.7.1", optional = true }

# TODO(@mxgrey) We could probably remove bevy_tasks when the single_threaded_async
# feature is active, but we'd have to refactor some internal usage of
# bevy_tasks::Task, so we're leaving it as a mandatory dependency for now.
bevy_tasks = { version = "0.12", features = ["multi-threaded"] }

itertools = "0.13"
smallvec = { version = "1.13", features = ["serde"] }
tokio = { version = "1.39", features = ["sync"] }
futures = "0.3"
backtrace = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# These dependencies are only used by the testing module.
# We may want to consider feature-gating them, but we use
# the testing module for doctests, and doctests can only
# make use of default features, so we're a bit stuck with
# these for now.
bevy_core = "0.12"
bevy_time = "0.12"

schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
cel-interpreter = { version = "0.9.0", features = ["json"], optional = true }
tonic = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
prost-reflect = { version = "0.16", features = ["serde"], optional = true }
http = { version = "1.3", optional = true }
tracing = "0.1.41"
strum = { version = "0.26.3", optional = true, features = ["derive"] }
semver = { version = "1.0.24", optional = true }

[target.wasm32-unknown-unknown.dependencies]
uuid = { version = "1.13.1", default-features = false, features = ["js"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[features]
single_threaded_async = ["dep:async-task"]
diagram = [
  "dep:cel-interpreter",
  "dep:schemars",
  "dep:semver",
  "dep:serde",
  "dep:serde_json",
  "dep:strum",
  "dep:tonic",
  "dep:prost",
  "dep:prost-reflect",
  "dep:http",
]
trace = ["diagram"]

[dev-dependencies]
async-std = { version = "1.12" }
test-log = { version = "0.2.16", features = [
  "trace",
], default-features = false }

[workspace]
members = [
  "examples/diagram/calculator",
  "examples/zenoh-examples",
  "diagram-editor",
]

[[bin]]
name = "generate_schema"
path = "src/diagram/generate_schema.rs"
required-features = ["diagram"]
doc = false
