<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crossflow</name>
  <version>0.0.1</version>
  <description>General-purpose workflow execution</description>
  <maintainer email="mxgrey@intrinsic.ai">Michael X. Grey</maintainer>
  <license>Apache License 2.0</license>
  <author email="mxgrey@intrinsic.ai">Michael X. Grey</author>

  <depend>rclrs</depend>
  <depend>rosidl_runtime_rs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Used by example code -->
  <test_depend>geometry_msgs</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>example_interfaces</test_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
