[package]
name = "bevy_impulse_dyn"
version = "0.0.1"
edition = "2021"
authors = ["Teo Koon Peng <koonpeng@intrinsic.ai>"]
license = "Apache-2.0"
description = "Extension to bevy_impulse to save and run serialized workflows"
repository = "https://github.com/open-rmf/bevy_impulse"
keywords = ["reactive", "workflow", "behavior", "agent", "bevy", "bevy_impulse"]
categories = ["science::robotics", "asynchronous", "concurrency", "game-development"]

[dependencies]
bevy_app = "0.12"
bevy_impulse = { version = "0.0.1", path = ".." }
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
