[package]
name = "bevy_impulse_diagram_editor"
version = "0.0.1"
edition = "2021"
authors = ["Teo Koon Peng <koonpeng@intrinsic.ai>"]
license = "Apache-2.0"
description = "Frontend for bevy_impulse diagrams"
readme = "README.md"
repository = "https://github.com/open-rmf/bevy_impulse"
keywords = ["reactive", "workflow", "behavior", "agent", "bevy", "frontend", "diagram"]
categories = [
  "science::robotics",
  "asynchronous",
  "concurrency",
  "game-development",
]
exclude = [
  "/build.rs"
]

[lib]
path = "server/lib.rs"

[dependencies]
axum = "0.8.4"
bevy_app = "0.12.1"
bevy_ecs = "0.12.1"
bevy_impulse = { version = "0.0.2", path = "..", features = ["diagram"] }
flate2 = { version = "1.1.1", optional = true }
mime_guess = "2.0.5"
serde = "1.0.219"
serde_json = "1.0.140"
tar = { version = "0.4.44", optional = true }
tokio = "1.45.1"
tracing = "0.1.41"

[build-dependencies]
flate2 = { version = "1.1.1", optional = true }
tar = { version = "0.4.44", optional = true }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"

[features]
default = ["frontend"]
frontend = ["dep:flate2", "dep:tar"]
