[package]
name = "bevy_impulse_diagram_editor"
version = "0.0.1"
edition = "2021"
authors = ["Teo Koon Peng <koonpeng@intrinsic.ai>"]
license = "Apache-2.0"
description = "Frontend for bevy_impulse diagrams"
readme = "README.md"
repository = "https://github.com/open-rmf/bevy_impulse"
keywords = [
  "reactive",
  "workflow",
  "behavior",
  "agent",
  "bevy",
  "frontend",
  "diagram",
]
categories = [
  "science::robotics",
  "asynchronous",
  "concurrency",
  "game-development",
]
exclude = ["/build.rs"]

[lib]
path = "server/lib.rs"

[dependencies]
axum = { version = "0.8.4", features = ["json"], default-features = false }
bevy_app = "0.12.1"
bevy_ecs = "0.12.1"
bevy_impulse = { version = "0.0.2", path = "..", features = [
  "diagram",
  "trace",
] }
flate2 = { version = "1.1.1", optional = true }
futures-util = "0.3.31"
indexmap = { version = "2.10.0", optional = true, features = ["serde"] }
mime_guess = { version = "2.0.5" }
schemars = { version = "0.9", optional = true }
serde = "1.0.219"
serde_json = "1.0.140"
tar = { version = "0.4.44", optional = true }
thiserror = "2.0.16"
tokio = { version = "1.45.1", features = ["macros", "time"] }
tracing = "0.1.41"

[build-dependencies]
flate2 = { version = "1.1.1", optional = true }
tar = { version = "0.4.44", optional = true }

[dev-dependencies]
futures-channel = "0.3.31"
test-log = "0.2.18"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"

[features]
default = ["frontend", "router"]
debug = ["router", "axum/ws"]
frontend = ["router", "dep:flate2", "dep:tar"]
router = []
json_schema = ["dep:schemars", "dep:indexmap"]

[[bin]]
name = "print_schema"
path = "server/bin/print_schema.rs"
required-features = ["json_schema"]
