[package]
name = "crossflow_diagram_editor"
version = "0.0.1"
edition = "2021"
authors = ["Teo Koon Peng <koonpeng@intrinsic.ai>"]
license = "Apache-2.0"
description = "Frontend for crossflow diagrams"
readme = "README.md"
repository = "https://github.com/open-rmf/crossflow"
keywords = [
  "reactive",
  "workflow",
  "behavior",
  "agent",
  "bevy",
  "frontend",
  "diagram",
]
categories = [
  "science::robotics",
  "asynchronous",
  "concurrency",
  "game-development",
]
exclude = ["/build.rs"]

[lib]
path = "server/lib.rs"

[dependencies]
axum = { workspace = true, features = ["json"], default-features = false }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
crossflow = { version = "0.0.1", path = "..", features = [
  "diagram",
  "trace",
] }
clap = { workspace = true, features = ["derive"], optional = true }
flate2 = { version = "1.1.1", optional = true }
futures-util = { workspace = true }
indexmap = { version = "2.10.0", optional = true, features = ["serde"] }
mime_guess = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tar = { version = "0.4.44", optional = true }
thiserror = "2.0.16"
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }

[build-dependencies]
flate2 = { version = "1.1.1", optional = true }
tar = { version = "0.4.44", optional = true }

[dev-dependencies]
futures-channel = "0.3.31"
test-log = "0.2.18"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"

[features]
default = ["frontend", "router"]
debug = ["router", "axum/ws"]
frontend = ["router", "dep:flate2", "dep:tar"]
router = []
json_schema = ["dep:schemars", "dep:indexmap"]
basic_executor = [
  "router",
  "frontend",
  "dep:clap",
  "dep:tracing-subscriber",
  "tokio/rt-multi-thread",
  "axum/default",
]

[[bin]]
name = "print_schema"
path = "server/bin/print_schema.rs"
required-features = ["json_schema"]
