[package]
name = "crossflow_derive"
version = "0.0.1"
edition = "2021"
authors = ["Grey <mxgrey@intrinsic.ai>"]
license = "Apache-2.0"
description = "Procedural macros for crossflow"
readme = "README.md"
repository = "https://github.com/open-rmf/crossflow"
keywords = ["reactive", "workflow", "behavior", "agent", "bevy"]
categories = ["science::robotics", "asynchronous", "concurrency", "game-development"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.93"
