[package]
name = "bevy_impulse_diagram_editor_wasm"
version = "0.0.1"
edition = "2021"
authors = ["Teo Koon Peng <koonpeng@intrinsic.ai>"]
license = "Apache-2.0"
description = "Webassembly backend for bevy_impulse diagram editor"
readme = "README.md"
repository = "https://github.com/open-rmf/bevy_impulse"
keywords = [
  "reactive",
  "workflow",
  "behavior",
  "agent",
  "bevy",
  "diagram",
  "wasm",
  "webassembly",
]
categories = [
  "science::robotics",
  "asynchronous",
  "concurrency",
  "game-development",
]

[dependencies]
axum = { workspace = true, features = ["json"], default-features = false }
bevy_app = { workspace = true }
bevy_impulse = { version = "0.0.2", path = "../..", features = [
  "diagram",
  "single_threaded_async",
] }
bevy_impulse_diagram_editor = { version = "0.0.1", path = "..", default-features = false }
mime_guess = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4.50"
tokio = { workspace = true, default-features = false, features = ["rt"] }
futures = { workspace = true }
serde.workspace = true

[build-dependencies]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
