[package]
name = "ros2-workflow-examples"
edition = "2021"
version = "0.0.1"

[[bin]]
name = "nav-example"
path = "src/nav_example.rs"

[[bin]]
name = "fake-plan-generator"
path = "src/fake_plan_generator.rs"

[[bin]]
name = "goal-requester"
path = "src/goal_requester.rs"

[dependencies]
bevy_app = "0.12"
bevy_core = "0.12"
bevy_impulse = { path = "../..", features = ["diagram", "ros2"] }
serde = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
clap = { version = "*", features = ["derive"] }
rand = "*"

rclrs = { workspace = true }
nav_msgs = { version = "*", features = ["serde", "schemars"] }
geometry_msgs = { version = "*", features = ["serde", "schemars"] }
std_msgs = { version = "*", features = ["serde", "schemars"] }
builtin_interfaces = { version = "*", features = ["serde", "schemars"] }
