[package]
name = "zenoh-examples"
version = "0.0.2"
edition = "2021"

[[bin]]
name = "door-manager"
path = "src/door_manager.rs"

[[bin]]
name = "use-door"
path = "src/use_door.rs"

[dependencies]
bevy_app = "0.12"
bevy_core = "0.12"
bevy_ecs = "0.12"
bevy_time = "0.12"
bevy_impulse = { version = "0.0.2", path = "../..", features = ["diagram"] }
futures = "0.3"
schemars = { version = "0.8.21" }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
prost = "0.13.5"
tracing = "0.1.41"
clap = { version = "4.5.23", features = ["derive"] }
uuid = { version = "*", features = ["v4"] }
zenoh = { version = "1.3.2", features = ["unstable"] }
zenoh-ext = { version = "*", features = ["unstable"] }

[build-dependencies]
prost-build = "0.13.5"
