[package]
name = "calculator"
version = "0.3.0"
edition = "2021"

[dependencies]
bevy_app = "0.15"
bevy_core = "0.15"
bevy_impulse = { version = "0.3.0", path = "../../..", features = ["diagram"] }
bevy_time = "0.15"
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.128"
tracing-subscriber = "0.3.19"

[dev-dependencies]
assert_cmd = "2.0.16"
