[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
bevy_app = "0.12"
bevy_core = "0.12"
bevy_impulse = { version = "0.0.2", path = "../../..", features = ["diagram"] }
bevy_impulse_diagram_editor = { version = "0.0.1", path = "../../../diagram-editor", default-features = false, optional = true }
bevy_time = "0.12"
clap = { version = "4.5.23", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.19"
calculator_ops_catalog = { version = "0.1.0", path = "../calculator_ops_catalog" }

prost-reflect = { version = "0.16", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.16"

[build-dependencies]
tonic-prost-build = { version = "0.14" }

[features]
default = ["api", "frontend"]
api = ["bevy_impulse_diagram_editor/router"]
frontend = ["api", "bevy_impulse_diagram_editor/frontend"]
