[package]
name = "calculator_ops_catalog"
version = "0.1.0"
edition = "2021"
description = "catalog of reusable calculator operations"

[dependencies]
bevy_app = "0.12"
bevy_core = "0.12"
bevy_impulse = { version = "0.0.2", path = "../../..", features = ["diagram"] }
bevy_time = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing-subscriber = "0.3.19"
