[package]
name = "calculator_ops_catalog"
version = "0.1.0"
edition = "2021"
description = "catalog of reusable calculator operations"

[dependencies]
bevy_app = { workspace = true }
bevy_impulse = { version = "0.0.2", path = "../../..", features = ["diagram"] }
bevy_time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing-subscriber = { workspace = true }
